k8s/admin-api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rapid-cdl-admin-api
spec:
  type: ClusterIP
  selector:
    app: rapid-cdl-admin-api
  ports:
    - name: http
      port: 8083
      targetPort: 8083
      protocol: TCP
